--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -3,3 +3,4 @@ easy_admin:
         # List the entity class name you want to manage
         - App\Entity\Ciudades
         - App\Entity\Clientes
+        - App\Entity\Contactos
