login y logout controlador default

--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -1,4 +1,7 @@
 easy_admin:
+    design:
+        menu: 
+          - { label: 'Public Homepage', route: 'homepage' ,default: true }
     entities:
         # List the entity class name you want to manage
         - App\Entity\Ciudades
