--- a/config/packages/fos_user.yaml
+++ b/config/packages/fos_user.yaml
@@ -1,7 +1,7 @@
 fos_user:
     db_driver: orm # other valid values are 'mongodb' and 'couchdb'
     firewall_name: main
-    user_class: App\Entity\FosUser
+    user_class: App\Entity\User
     from_email:
         address: "mailer@yourdomain.com"
         sender_name: "John Doe"
