--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -24,4 +24,4 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin/, role: [ROLE_ADMIN,ROLE_FLOTILLAS,ROLE_VENTAS] }
+        - { path: ^/admin/, role: [ROLE_ADMIN,ROLE_ADMIN_FLOTILLA,ROLE_VENTAS] }
