--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,6 +1,9 @@
 index:
     path: /
     controller: App\Controller\DefaultController::index
+login:
+    path: /login
+    controller: App\Controller\UserController::login
 easy_admin_bundle:
     resource: '@EasyAdminBundle/Controller/EasyAdminController.php'
     prefix: /admin
