omitir por accion jquery

--- a/.env
+++ b/.env
@@ -33,3 +33,4 @@ DATABASE_URL=mysql://user:pass@127.0.0.1:3306/wallet_gasolineras
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+# GMAIL_PASSWORD=
