--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=a4663cde663dfb602dd9a13ae2effd17
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://user:pass@127.0.0.1:3306/wallet_gasolineras
+DATABASE_URL=mysql://daniel:root@127.0.0.1:3306/permergas
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
